# FullStack-Test

./: .gitignore  docker-compose.prod.yml  docker-compose.yml  readme.md
.github/workflows/: deploy.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/src/: main.py
backend/src/api/config/: settings.py
backend/src/api/dependencies/: __init__.py  ai_response.py
backend/src/api/routers/: __init__.py  ai_response.py  send_mail.py
backend/src/api/schemas/: __init__.py  base.py  mail.py
backend/src/usecases/: __init__.py  ai_response.py  send_mail.py
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js
